@@ -3,6 +3,10 @@ hunchentoot-auth
 Copyright (c) 2007 Cyrus Harmon
 All rights reserved.
 
+Portions of the code are from Hunchentoot, which are:
+
+Copyright (c) 2004-2007, Dr. Edmund Weitz.  All rights reserved.
+
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
